Fix homepage mobile spacing

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -508,6 +508,7 @@ a {
         display: flex;
         flex-direction: column;
         align-items: center;
+        gap: 20px;
     }
     .partners-logos img {
         padding: 10px 15px;
